Prometheus-operator/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-k8s-grafana
  namespace: monitoring
spec:
  rules:
    - host: prometheus.huisebug.com
      http:
        paths:
          - backend:
              serviceName: prometheus-k8s
              servicePort: 9090
            path: /
    - host: grafana.huisebug.com
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
            path: /
